feat: added google map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--        <service-->
+<!--            android:name=".ForegroundLocationService"-->
+<!--            android:foregroundServiceType="location">-->
+<!--        &lt;!&ndash; Any inner elements would go here. &ndash;&gt;-->
+<!--        </service>-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAPS_API_KEY}" />
     </application>
+
 
 </manifest>
