--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".ForegroundSensorService"
+            android:name=".sensors.ForegroundSensorService"
             android:exported="false"
             android:foregroundServiceType="dataSync">
         </service>
