Revert "Merge branch 'feature/child-acct-creation/luchen' into feature/phone-call/yifan"
This reverts commit 38eabcfe1646729cbc6c3c4d1989cc663ec4cab7, reversing
changes made to ee1935f891dbe5d3d9a17a8395ce3f67ea4c65db.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".sensors.ForegroundSensorService"
-            android:exported="false"
-            android:foregroundServiceType="dataSync">
-        </service>
+        <receiver android:name=".BatteryLevelReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_CHANGED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
